@@ -1,1 +1,1 @@
-PLUGIN_REQUIRE_PACKAGE (LIBPULSE libpulse)
+PLUGIN_REQUIRE_LIBRARY (PULSE pulse-simple)
